--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "name": "redux-simple-starter",
   "version": "1.0.0",
-  "description": "Simple starter package for Redux with React and Babel support",
+  "description": "playing with React",
   "main": "index.js",
-  "repository": "git@github.com:StephenGrider/ReduxSimpleStarter.git",
   "scripts": {
     "start": "nodemon ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
     "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js --recursive ./test",
@@ -12,24 +11,25 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.1.2",
+    "@babel/preset-env": "^7.1.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^6.4.1",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.1.18",
     "babel-preset-stage-0": "^6.24.1",
-    "nodemon": "^1.18.4",
-    "webpack": "^1.12.9",
-    "webpack-dev-server": "^1.14.0"
+    "nodemon": "^1.18.5",
+    "webpack": "^1.15.0",
+    "webpack-dev-server": "^1.16.5"
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "babel": "^6.23.0",
     "babel-preset-stage-1": "^6.1.18",
+    "jquery": "^3.3.1",
     "lodash": "^3.10.1",
-    "react": "16.3.2",
-    "react-dom": "16.3.2",
-    "react-redux": "5.0.7",
-    "redux": "4.0.0",
-    "redux-promise": "^0.6.0"
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2"
   }
 }
